--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Coding Tutor.sln"
+    "dotnet.defaultSolution": "mr-coding-tutor-unity.sln"
 }
