--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
     "com.meta.xr.sdk.all": "69.0.1",
+    "com.meta.xr.simulator.samples": "66.0.1",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.development": "1.0.2",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "com.unity.xr.hands": "1.4.3",
     "com.unity.xr.interaction.toolkit": "2.6.3",
     "com.unity.xr.management": "4.5.0",
     "com.unity.xr.openxr": "1.13.0",
