--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==3.11.11
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyascii==0.3.2
+anyio==4.8.0
 attrs==24.3.0
 audioread==3.0.1
 babel==2.16.0
@@ -26,6 +27,7 @@ cymem==2.0.10
 Cython==3.0.11
 dateparser==1.1.8
 decorator==5.1.1
+distro==1.9.0
 docopt==0.6.2
 einops==0.8.0
 encodec==0.1.1
@@ -42,7 +44,10 @@ gruut_lang_de==2.0.1
 gruut_lang_en==2.0.1
 gruut_lang_es==2.0.1
 gruut_lang_fr==2.0.2
+h11==0.14.0
 hangul-romanize==0.1.0
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.27.1
 idna==3.10
 inflect==7.5.0
@@ -50,6 +55,7 @@ itsdangerous==2.2.0
 jamo==0.4.1
 jieba==0.42.1
 Jinja2==3.1.5
+jiter==0.8.2
 joblib==1.4.2
 jsonlines==1.2.0
 kiwisolver==1.4.8
@@ -74,6 +80,7 @@ nltk==3.9.1
 num2words==0.5.14
 numba==0.60.0
 numpy==1.26.4
+openai==1.63.0
 openai-whisper @ git+https://github.com/openai/whisper.git@517a43ecd132a2089d85f4ebc044728a71d49f6e
 packaging==24.2
 pandas==1.5.3
@@ -105,6 +112,7 @@ scipy==1.15.1
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
+sniffio==1.3.1
 soundfile==0.13.0
 soxr==0.5.0.post1
 spacy==3.8.3
