--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,9 +5,11 @@
     "com.readyplayerme.core": "7.4.0",
     "com.unity.cloud.gltfast": "6.0.1",
     "com.unity.collab-proxy": "2.5.2",
+    "com.unity.ext.nunit": "2.0.5",
     "com.unity.feature.development": "1.0.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.shadergraph": "14.0.11",
+    "com.unity.test-framework": "1.4.6",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
