--- a/python_servers/requirements.txt
+++ b/python_servers/requirements.txt
@@ -29,10 +29,12 @@ dateparser==1.1.8
 decorator==5.1.1
 distro==1.9.0
 docopt==0.6.2
+edge-tts==7.0.0
 einops==0.8.0
 encodec==0.1.1
 filelock==3.16.1
 Flask==3.1.0
+flask-cors==5.0.1
 fonttools==4.55.3
 frozenlist==1.5.0
 fsspec==2024.12.0
@@ -75,6 +77,7 @@ mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.1.0
 murmurhash==1.0.11
+mutagen==1.47.0
 networkx==2.8.8
 nltk==3.9.1
 num2words==0.5.14
@@ -119,9 +122,11 @@ spacy==3.8.3
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.0
+srt==3.5.3
 SudachiDict-core==20241021
 SudachiPy==0.6.10
 sympy==1.13.1
+tabulate==0.9.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 thinc==8.3.3
